fix:gap

--- a/src/koduq/sections/shared/DropdownFrieze/DropdownSections/ContactDdSection.module.scss
+++ b/src/koduq/sections/shared/DropdownFrieze/DropdownSections/ContactDdSection.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 4rem;
   width: 100%;
   position: relative;
   height: 100%;
